added products controller and model

--- a/views/includes/menu.jade
+++ b/views/includes/menu.jade
@@ -5,4 +5,8 @@ nav.menu
 		li.nav-item
 			a.nav-link(href="/aromas") Ароматы
 		li.nav-item
+			a.nav-link(href="/products") Продукты
+		li.nav-item
+			a.nav-link(href="/addproduct") Создать продукт
+		li.nav-item
 			a.nav-link(href="/addaroma") Создать аромат
