delete product method and link aroma-product page added

--- a/views/includes/menu.jade
+++ b/views/includes/menu.jade
@@ -10,3 +10,5 @@ nav.menu
 			a.nav-link(href="/addproduct") Создать продукт
 		li.nav-item
 			a.nav-link(href="/addaroma") Создать аромат
+		li.nav-item
+			a.nav-link(href="/linkaroma") Связать аромат
