--- a/views/aromas/linkaroma.jade
+++ b/views/aromas/linkaroma.jade
@@ -1,4 +1,23 @@
 extends ../layout
 block content
 	h2=title
-	div soon...
+	div.linking-page
+		section.products.column
+			h5 Продукты
+			ul.productlist
+				each product, i in products
+					li.prod.list-item
+						a(href="#{product.link}")= product.title
+						a.delete-item(href="/deleteproduct/#{product._id}") ×
+
+		section.aromas.column
+			h5 Ароматы
+			ul.aromalist
+				each aroma, i in aromas
+					li.odor.list-item
+						a(href="/aromas/#{aroma._id}/products")= aroma.title
+						a.delete-item(href="/deletearoma/#{aroma._id}") ×
+
+
+
+
